[package]
name = "flac-encoder"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Rust Flac encoder that uses libflac."
repository = "https://github.com/jaspwr/flac-encoder-rs"
license = "LGPL-2.1"
keywords = ["audio", "flac", "encoder", "libflac"]

[dependencies]
libflac-sys = "0.3.2"
