[package]
name = "flac-encoder"
version = "0.1.1"
edition = "2021"
readme = "README.md"
description = "Rust Flac encoder that uses libflac."
repository = "https://github.com/jaspwr/flac-encoder-rs"
license = "MIT"
keywords = ["audio", "flac", "encoder", "libflac"]

[dependencies]
libflac-sys = "0.3.2"
